# kvs

./: Dockerfile  pyproject.toml
.github/workflows/: deploy.yaml  lint.yaml
app/: config.py  main.py
app/db/: kvstorage.py  lru_storage.py
app/servers/: kvstore.py  kvstore_server.py  utils.py
app/services/: kvstore.py  queue_kvstore.py  utils.py
app/storage/: kvstorage.py  lru_kvstorage.py
protos/kvstore/: kvstore_pb2.py  kvstore_pb2.pyi  kvstore_pb2_grpc.py
