[project]
name = "KVS"
version = "0.1.0"
description = "Key-Value Store"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "TID", "B", "W"]
ignore = ["N802"]
